--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.4",
     "nuxt": "^3.9.0",
+    "shadcn-nuxt": "^0.8.6",
+    "typescript": "^5.3.3",
     "vue": "^3.4.6",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.309.0",
+    "radix-vue": "^1.3.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
