--- a/package.json
+++ b/package.json
@@ -12,17 +12,31 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.4",
     "nuxt": "^3.9.0",
+    "nuxt-icon": "^0.6.8",
+    "nuxt-og-image": "3.0.0-rc.25",
     "shadcn-nuxt": "^0.8.6",
     "typescript": "^5.3.3",
     "vue": "^3.4.6",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.17",
+    "@heroicons/vue": "^2.1.1",
+    "@nuxt/image": "^1.1.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tiptap/pm": "^2.1.15",
+    "@tiptap/starter-kit": "^2.1.15",
+    "@tiptap/vue-3": "^2.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.309.0",
+    "pinia": "^2.1.7",
     "radix-vue": "^1.3.0",
     "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7"
   }
 }
