--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.4",
+    "@vueuse/core": "^10.7.1",
+    "@vueuse/nuxt": "^10.7.1",
     "nuxt": "^3.9.0",
     "nuxt-icon": "^0.6.8",
     "nuxt-og-image": "3.0.0-rc.25",
