--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.309.0",
     "pinia": "^2.1.7",
+    "preline": "^2.0.3",
     "radix-vue": "^1.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
