--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tiptap/extension-bold": "^2.1.16",
     "@tiptap/pm": "^2.1.15",
     "@tiptap/starter-kit": "^2.1.15",
     "@tiptap/vue-3": "^2.1.15",
