--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/vue-3": "^2.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.1",
     "lucide-vue-next": "^0.309.0",
     "pinia": "^2.1.7",
     "preline": "^2.0.3",
