--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "radix-vue": "^1.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vue-sonner": "^1.0.2"
   }
 }
