--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.0",
     "@headlessui/vue": "^1.7.17",
     "@heroicons/vue": "^2.1.1",
     "@nuxt/image": "^1.1.0",
@@ -36,13 +37,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.6.0",
     "lucide-vue-next": "^0.309.0",
+    "nuxt-vuefire": "^1.0.1",
     "pinia": "^2.1.7",
     "preline": "^2.0.3",
     "radix-vue": "^1.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
-    "vue-sonner": "^1.0.2"
+    "vue-sonner": "^1.0.2",
+    "vuefire": "^3.1.22"
   }
 }
