--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@tiptap/pm": "^2.1.15",
     "@tiptap/starter-kit": "^2.1.15",
     "@tiptap/vue-3": "^2.1.15",
+    "@vueuse/motion": "^2.0.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
