--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tiptap/extension-bold": "^2.1.16",
+    "@tiptap/extension-italic": "^2.1.16",
     "@tiptap/extension-strike": "^2.1.16",
     "@tiptap/pm": "^2.1.15",
     "@tiptap/starter-kit": "^2.1.15",
