--- a/package.json
+++ b/package.json
@@ -30,9 +30,18 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tiptap/extension-blockquote": "^2.1.16",
     "@tiptap/extension-bold": "^2.1.16",
+    "@tiptap/extension-bullet-list": "^2.1.16",
     "@tiptap/extension-italic": "^2.1.16",
+    "@tiptap/extension-link": "^2.1.16",
+    "@tiptap/extension-list-item": "^2.1.16",
+    "@tiptap/extension-ordered-list": "^2.1.16",
+    "@tiptap/extension-paragraph": "^2.1.16",
+    "@tiptap/extension-placeholder": "^2.1.16",
     "@tiptap/extension-strike": "^2.1.16",
+    "@tiptap/extension-text-align": "^2.1.16",
+    "@tiptap/extension-underline": "^2.1.16",
     "@tiptap/pm": "^2.1.15",
     "@tiptap/starter-kit": "^2.1.15",
     "@tiptap/vue-3": "^2.1.15",
