--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@vueuse/core": "^10.7.1",
     "@vueuse/nuxt": "^10.7.1",
@@ -33,6 +34,7 @@
     "@tiptap/extension-blockquote": "^2.1.16",
     "@tiptap/extension-bold": "^2.1.16",
     "@tiptap/extension-bullet-list": "^2.1.16",
+    "@tiptap/extension-image": "^2.1.16",
     "@tiptap/extension-italic": "^2.1.16",
     "@tiptap/extension-link": "^2.1.16",
     "@tiptap/extension-list-item": "^2.1.16",
