--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@vueuse/motion": "^2.0.0",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.2",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
