--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.2",
     "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.6.0",
